--- a/mycon.html
+++ b/mycon.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="spMini.png">
 		<!-- Make the scale of screen to 1 to device ------------------------------>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script type="text/javascript" src="Smeetjavascript.js"></script>
+		<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
 	</head>
 
 	<body>
