--- a/CyberCV2015.html
+++ b/CyberCV2015.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-		<script type="text/javascript" src="Smeetjavascript.js"></script>
+<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
 	</head>
 	<body>
 		<!-- nav bar ------------------------------>
