Cluster Working on map

--- a/myblog.html
+++ b/myblog.html
@@ -130,8 +130,8 @@
         </div>
     </footer>
     <!-- script and map -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYNYcccCa4JnUmOlg_Aq7gpDymQLi0f3Q&callback=initMap">
-    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYNYcccCa4JnUmOlg_Aq7gpDymQLi0f3Q&callback=initMap"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
     <script type="text/javascript" src="Javascript/map.js"></script>
 </body>
