Map style, about me, index css pages and js update

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>About me</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="CSS/project.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style1.css">
     <!-- My my mini icon ------------------------------>
     <link rel="icon" href="spMini.png">
     <!-- Make the scale of screen to 1 to device ------------------------------>
@@ -335,7 +335,7 @@
         </div>
         <br>
     </div>
-    <a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
+    <!-- <a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a> -->
     <footer class="footer">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
         <div class="container text-center">
