--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Smeet Patel Home</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style1.css">
+    <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <!-- My my mini icon ------------------------------>
     <link rel="icon" href="spMini.png">
     <!-- Make the scale of screen to 1 to device ------------------------------>
@@ -35,7 +35,7 @@
         I am a travel enthusiast. An aspiring software developer.</p>
 
         <div class="sticky">
-                <div class="stickrow">projects</div>
+                <div class="stickrow">projects + Blog</div>
         </div>
         <hr>
     <!-- Index Page sports titles ------------------------------>
@@ -44,7 +44,6 @@
         <!--enable for the flex tiles row and col--->
         <div class="row">
             <div class="column">
-                <br>
                 <!--container consist the image and text to display center
                   when full screen---------------------------------------->
                 <div class="hoverOverImage">
@@ -55,7 +54,7 @@
                         </div>
                     </a>
                 </div>
-                <br><br>
+                <br>
                 <div class="hoverOverImage">
                     <img src="Webimages/ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
@@ -67,7 +66,6 @@
             </div>
             <!--second col-------------->
             <div class="column">
-                <br>
                 <div class="hoverOverImage">
                     <img src="Webimages/bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
@@ -76,7 +74,7 @@
                         </div>
                     </a>
                 </div>
-                <br><br>
+                <br>
                 <div class="hoverOverImage">
                     <img src="Webimages/conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
@@ -89,7 +87,7 @@
         </div>
     </div>
     <br>
-    <a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
+    <!-- <a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a> -->
     <!---------------------------------------------------------->
     <!-- Footer with Icons ------------------------------------->
     <footer class="footer">
