--- a/myblog.html
+++ b/myblog.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Dimmu Burger | Project</title>
+    <title>My Blog</title>
     <!-- devloper mode without api count -->
     <!-- <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script> -->
     <!-- Stylesheets ------------------------------>
