--- a/mywork.html
+++ b/mywork.html
@@ -2,8 +2,8 @@
 <html>
    <head>
       <title>My Work</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
-      <link rel="stylesheet" type="text/css" href="style1.css">
+      <link rel="stylesheet" type="text/css" href="CSS/style1.css">
+      <link rel="stylesheet" type="text/css" href="CSS/project.css">
       <!-- My my mini icon ------------------------------>
       <link rel="icon" href="spMini.png">
       <!-- Make the scale of screen to 1 to device ------------------------------>
@@ -20,12 +20,17 @@
          <a href="aboutme.html">ABOUT ME</a>
          <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
       </div>
-      <div class="bannerContainer">
+      <br>
+   <!-- banner  ------------------------------>
+    <img src="Webimages/myworkbanner.png" alt="my work banner" class="cenBanner">
+    <img src="Webimages/myworksqarebanner.png" alt="my work banner" class="cenBannersquare">
+    <div id="overview"></div>
+      <!-- <div class="bannerContainer">
          <img src="p41.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
          <div class="bottom-left">
             <p style="color: white"><b>MY WORK</b></p>  
          </div>
-      </div>
+      </div> -->
 	  
       <div class="containerWork">
 	  <!--<p>Everest Web Broswer project coming soon. Andriod Studio.</p>-->
@@ -351,7 +356,6 @@
             </div> -->
          </div>
       </div>
-      <a href="#"><i id="fixedbacktotop" class="fa fa-chevron-circle-up" style="font-size:48px;color:#0F78C3"></i></a>
       <footer class="footer">
          <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
          <div class="container text-center">
