Sinagpore Blog upload

--- a/myblog.html
+++ b/myblog.html
@@ -50,9 +50,7 @@
         <div id="map"></div>
         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d305263.6855162783!2d115.12602790215035!3d-8.496069224919468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d739f22c9c3%3A0x54a38afd6b773d1c!2sUbud%2C+Gianyar%2C+Bali%2C+Indonesia!5e1!3m2!1sen!2snz!4v1544684952370"
 				frameborder="0" style="border:0; width: 100%; min-height: 400px; border-radius: 15px;" allowfullscreen></iframe> -->
-        <p style="color: orange" id="loadblog">Click on the map to activate blog. Where next? Udaipur, Singapore or
-            Otago
-            region?
+        <p style="color: orange" id="loadblog" style="text-align: center">Click on the map to read the blog?
         </p>
         <!-- <p id="demo">Testing purposes</p> -->
     </div>
@@ -116,6 +114,50 @@
         </p>
         <p><b>Tips: </b>Catch Skybus from and to Airport, the expensive eateries aren’t always the best, walk or catch
             the tram around the CBD
+        </p>
+    </div>
+    <div class="centerWrap" id="singBlog" style="display: none;">
+        <!-- <br> -->
+        <h1 class="w">Singapore</h1>
+        <p>Singapore is finally becoming a must visit amongst Asian destinations. From the minute you land at the
+            airport till the moment that you leave the country you are left in awe by how the so-called concrete jungle
+            has been turned into one of the most attractive eco-friendly destinations. The central location means it
+            can act as an effective base for travelling throughout Oriental Asia, South-East Asia and the
+            Sub-Continent.
+        </p>
+        <img src="pictures/p18a.jpg" alt="Singapore" class="cenimg" style="max-width: 800px"><br>
+        <p>Spending 2015 New Years in Singapore was a lot more unique to the usual Singapore experience. Two days were
+            spent walking the CBD exploring the local malls, temples (Buddha Tooth Relic Temple stands out), hawker
+            centers while taking in the views offered by the Singapore Flyer and almost mystical gardens of the Gardens
+            by the Bay. The Christmas themed gardens brought a white Christmas feel to the part of the world which
+            rarely sees snow.
+        </p>
+        <p>In all honesty observing throughout a day how the Jurong Bird Park, Singapore Zoo and the neighboring
+            Singapore Night Safari work in cohesion to bring together animals from around the world in a safe
+            environment to educate visitors while looking after the various creatures personified the Singapore motto
+            of ‘where passion is made possible’. Compared to the lofty standards set by the other two – the artificial
+            safari setting of the Night Safari does seem to fall sort of bring the excitement other more authentic
+            safari settings from other parts of the world.</p>
+        <img src="blog/singaporeSuperTree.jpg" alt="Singapore" class="cenimg" style="max-width: 800px"><br>
+        <p>However, the highlight of the trip had to be making the journey on the cable car across to Sentosa Island to
+            spend New Year's Eve at Universal Studios Singapore. The rides perfectly help built the stories in the
+            seven themed zones; Hollywood, New York City, Sci-Fi City, Ancient Egypt, the Lost World, Far Far Away,
+            Madagascar. After leaving Sentosa Island the slow challenge of making it to Marina Bay Sands for the
+            spectacular New Year’s fireworks has to be part of the experience.</p>
+        <p>With the rate at which Singapore is evolving it will be interesting to watch from a side how far this ‘green
+            ecosystem’ will get to create a unique experience which remains authentically Singapore – a cocktail of
+            cultures – while having the continued point of difference compared to the usual Asian destinations of
+            Dubai, Bali, Thailand, Japan and Korea.</p>
+        <img src="blog/univerialsingapore.PNG" alt="Singapore" class="cenimg" style="max-width: 800px"><br>
+        <p><b>Food specialities: </b> Hawker Centers with Asian Cuisine or going across the border to Malaysia to get
+            cheap food.</p>
+        <p><b>Attractions: </b> Sentosa Island (it has something for everyone), walking along the famed Orchid Road and
+            CBD in general, Singapore Flyer, Gardens by the Bay, Singapore Zoo.
+        </p>
+        <p><b>Tips: </b>Go during New Years to experience the atmosphere and fire-works. Catch the MRT, Mustafa Center
+            in the precinct of Little India can get you everything for cheaper than the rest of the island. Try to get
+            the Singapore Airlines Stopover attraction package – as it will save you cost in accommodation and
+            attraction entrance fees as well as queuing time.
         </p>
     </div>
     <br>
