--- a/myblog.html
+++ b/myblog.html
@@ -50,8 +50,7 @@
         <div id="map"></div>
         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d305263.6855162783!2d115.12602790215035!3d-8.496069224919468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d739f22c9c3%3A0x54a38afd6b773d1c!2sUbud%2C+Gianyar%2C+Bali%2C+Indonesia!5e1!3m2!1sen!2snz!4v1544684952370"
 				frameborder="0" style="border:0; width: 100%; min-height: 400px; border-radius: 15px;" allowfullscreen></iframe> -->
-        <p style="color: orange" id="loadblog" style="text-align: center">Click on the map to read the blog?
-        </p>
+        <p style="color: orange" id="clickblog">Click on a marker to read the blog.</p>
         <!-- <p id="demo">Testing purposes</p> -->
     </div>
     <!-- Bali blog -->
@@ -117,7 +116,7 @@
         </p>
     </div>
     <div class="centerWrap" id="singBlog" style="display: none;">
-        <!-- <br> -->
+        <!-- Signapore blog -->
         <h1 class="w">Singapore</h1>
         <p>Singapore is finally becoming a must visit amongst Asian destinations. From the minute you land at the
             airport till the moment that you leave the country you are left in awe by how the so-called concrete jungle
@@ -159,6 +158,38 @@
             the Singapore Airlines Stopover attraction package – as it will save you cost in accommodation and
             attraction entrance fees as well as queuing time.
         </p>
+    </div>
+    <!-- Udaipur blog -->
+    <div class="centerWrap" id="udaiBlog" style="display: none;">
+        <h1 class="w">Udaipur (Rajasthan), India</h1>
+        <p>When Chittorgarh Fort fell in 1567, Rana Udai Singh II along with his legendary son Pratap Singh established
+            and built Udaipur and it was crowned as the capital of the Mewar Princely State. Now days, Udaipur is known
+            for hosting extravagant weddings, for its man-made Lakes and winding streets which personify the flamboyant
+            Indian culture as all your senses are teased.
+        </p>
+        <img src="blog/Udaipurairport.jpeg" alt="Udaipur" class="cenimg" style="max-width: 800px"><br>
+        <p>Spending a couple of Udaipur meant we were able to explore the streets and use it as a base to visit
+            Ranakpur Jain temples, Khumbhalgarh Fort and Chittorgarh Fort which all played a part of Mewar history as
+            much as Udaipur’s City Palace does till date. Staying at Shiv Nawas Palace meant we were staying on-site of
+            the City Palace allowing us easy access while taking in Mewar history at the Udaipur light show and sunrise
+            over Udaipur in the mornings. Looking around the city, you could understand what made Udaipur such an
+            appealing center in Rajasthan in the present but also why it must have been a tactical location as the
+            Aravelli Ranges snake around providing protection to the Lake City.
+        </p>
+        <img src="blog/Udaipurpalace.jpeg" alt="Udaipur" class="cenimg" style="max-width: 800px"><br>
+        <p>Udaipur is part of a puzzle that makes Rajasthan one of the most visited regions in India and Asia. Each one
+            brings a different aspect as Udaipur- “The Lake City” – combines royalty with clean tourist appealability.
+            However, starting a Rajasthan road trip from Udaipur means that the following townships have a lot to live
+            up to, but, it is a must.</p>
+        <img src="blog/Udaipurlargepalace.jpeg" alt="Udaipur" class="cenimg" style="max-width: 800px"><br>
+        <p><b>Food specialities: </b> Street food, Dal Bati, Rajasthani thali</p>
+        <p><b>Attractions: </b> City palace, walking the streets, day trip to the famed Ranakpur Jain temple and
+            Kumbhelgarh fort and a separate day trip to Chittorgarh fort, boat ride along Lake Pichola.
+        </p>
+        <p><b>Tips: </b>Don’t respond back to the street hagglers, barter for prices (initial price is always
+            inflated).
+        </p>
+        <img src="blog/Udaipurtajhotel.jpeg" alt="Udaipur" class="cenimg" style="max-width: 800px"><br>
     </div>
     <br>
     <!-- footer ------------------------------>
