central police shorten

--- a/2Shakes.html
+++ b/2Shakes.html
@@ -207,12 +207,15 @@
         <p>Mike, the project sponsor, preferred the second option but said he would like to have a footer as well as a
             visual cue which allows the user to know which form is currently active because the user has the option to
             go back and revisit forms. </p>
+            <h3 class="w">Final Prototype</h3>
             <img src="2shakes/loginpage.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
+            <p>The Login page has been redesigned with rounded corners and with a more contemporary look. </p>
             <img src="2shakes/reviewsignup.png" alt="New concept" class="cenimg" style="max-width: 800px"><br>
             <img src="2shakes/the chosen traning colour.PNG" alt="New concept" class="cenimg" style="max-width: 800px"><br>
         <video width="400" controls autoplay loop>
             <source src="2shakes/Prototype_RecordingV1.mov" type="video/mp4">
         </video>
+        <h3 class="w">Reflection</h3>
     </div>
 
 
