--- a/aboutme.html
+++ b/aboutme.html
@@ -25,13 +25,13 @@
     <br>
     <img src="AboutMe/aboutmeBanner.png" alt="Smeet" class="cenBanner">
     <img src="AboutMe/aboutmeSquareBanner.png" alt="Smeet" class="cenBannersquare">
-    <p align="center" class="centText">Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be
+    <p align="center" class="centText" style="color: black">Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be
         wondering about the design for the logo. The reasoning is simple, Smeet means to smile.</p>
     <div class="centerWrap">
         <div id="lineA">
             <!-- <p>Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be wondering about the
                 design for the logo. The reasoning is simple, Smeet means to smile.</p> -->
-            <p id="Dcolor">
+            <p style="color: black">
                 I am an aspiring software developer who, through experience has gained technical and interpersonal
                 skills. I have almost finished my <u>Master of Software Development</u> degree and have completed <u>Bachelor of
                 Commerce degree</u> having acquired knowledge in the fields of <em>accountancy, taxation and information systems with an
@@ -71,13 +71,13 @@
                         <br><br>
                     </div>
                 </div>
-            <p id="Dcolor">When I am not studying, you will find me reading about new technologies, the current affairs
+            <p style="color: black">When I am not studying, you will find me reading about new technologies, the current affairs
                 or a Lonely Planet, exploring new places (hiking and travelling), watching shows such as the Grand
                 Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a
                 creative minded person, I enjoy thinking about new ways to improve things, to build solutions for
                 issues. I believe that to predict the future; you have to create the future or very much be part of the
                 forefront of changing technology and being innovative.</p>
-            <p id="Dcolor">Currently, I am Working on updating and adding past projects to the website, enhancing the
+            <p style="color: black">Currently, I am Working on updating and adding past projects to the website, enhancing the
                 user experience. Along with the site, I am learning Android Studio and looking to convert java
                 applications to Android apps. I am also planning to make a native application for construction
                 projects, to improve communication between key stakeholders from a financial perspective adding more
