--- a/centralPolice.html
+++ b/centralPolice.html
@@ -43,6 +43,7 @@
         </div>
     </div>
     <div class="centerWrap">
+        <!-- project link button -->
         <a id="butproto" href="http://student.sim.vuw.ac.nz/paper/INFO246_16_T2/patelsmee/index.html" target="_blank">View
             Central Police Prototype</a>
         <p>CENTRAL POLICE is a metropolitan police dispatch system under development, which is responsible for sending
@@ -57,9 +58,7 @@
         <div id="overview"></div><br>
 
     </div>
-    <!-- Contact me buttons ------------------------------>
-
-    <!-- Contact me buttons ------------------------------>
+    <!-- personas ------------------------------>
     <div class="centerWrap">
         <h1 class="w">Personas </h1>
         <h2>Primary Personas</h2>
@@ -68,18 +67,20 @@
             the role of the primary user who will be using this police dispatch system. The personas also specify the
             user key behavioural traits, goals and the must and must not have features specific to the user and this
             enables to design the user experience to best accommodate these features. </p>
-        <img src="centralpolice/personaslinda.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
-        <img src="centralpolice/personasrichard.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
-        <img src="centralpolice/personasalan.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
+        <div class="video-container" style="text-align: center;">
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRU7afYlRXRzzSdGbzcfwHW6OmM3HhjLSmmo-d4QZjIm2bqMZMhm6FI0SBdcBRMlSx1H-8mUadMgzSc/embed?start=true&loop=true&delayms=3000"
+                frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
         <h2>secondary Personas</h2>
         <p>The <b>secondary personas</b> are the user that are secondary of nature such as part-time, trainee and
             technical support. They do not primarily use the central police dispatch system as someone who holds a
             managerial position and works full time. Secondary personas enable to enhance the usability for even for
             the user who has less exposure and experience with the system by catering for them with nice to have
             features. </p>
-        <img src="centralpolice/personasroger.png" alt="Personas" class="cenimg" style="max-width: 800px"><br>
-        <img src="centralpolice/personassonia.jpg" alt="Personas" class="cenimg" style="max-width: 800px"><br>
-        <img src="centralpolice/personasmattew.png" alt="Personas" class="cenimg" style="max-width: 800px">
+            <div class="video-container" style="text-align: center;">
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSoW8dyUQ7XIjdnlAH5GOdE2HPI2frf01okqvmqbIgjgaGWz9GeiAVJIDdzcsAqFQDuy0cPEsVj7_LK/embed?start=true&loop=true&delayms=3000"
+                    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
         <div id="wire"></div><br>
         <h1 class="w">Wireframes </h1>
         <p><b>Wireframe</b> were used a visual schematic or template of the screen to communicate interface and
@@ -98,7 +99,11 @@
             feedback based on the USE questionnaire questions. The main category of questions I asked was usefulness,
             ease of use, ease of learning and satisfaction. The feedback process enabled me to enhance the user
             experience and interaction for the prototype.</p>
-        <img src="centralpolice/formsummary.png" alt="Wireframes" class="cenimg" style="max-width: 800px">
+            <div class="video-container1" style="text-align: center;">
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRKb75Ro6Dl8gpPhkhzf1FkkJZHmIUnG086UuVQhAPmr7djTMzRv9ixjb5s866QTX-INVPIM64n3dSK/embed?start=true&loop=true&delayms=2000"
+                    frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
+        <!-- <img src="centralpolice/formsummary.png" alt="Wireframes" class="cenimg" style="max-width: 800px"> -->
         <div id="proto"></div><br>
         <h1 class="w">Prototype </h1>
         <img src="centralpolice/cplogin.png" alt="" class="cenimg" style="max-width: 800px"><br>
