--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                     <img src="Webimages/2shakes.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
                         <div class="hoverOverImage-layer_top">
-                            <div class="hoverOverImage-text">Web Development & UX</div>
+                            <div class="hoverOverImage-text">WEB DEVELOPMENT & UX</div>
                         </div>
                     </a>
                 </div>
                 <br>
                 <div class="hoverOverImage">
-                    <img src="Webimages/ebike1.png" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
-                    <a href="mywork.html">
+                    <img src="Webimages/blogmap.PNG" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
+                    <a href="myblog.html">
                         <div class="hoverOverImage-layer_top">
-                            <div class="hoverOverImage-text">Graphical Design Projects</div>
+                            <div class="hoverOverImage-text">ADVENTURE BLOG</div>
                         </div>
                     </a>
                 </div>
@@ -70,7 +70,7 @@
                     <img src="Webimages/bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
                         <div class="hoverOverImage-layer_top">
-                            <div class="hoverOverImage-text">Native App</div>
+                            <div class="hoverOverImage-text">NATIVE APP</div>
                         </div>
                     </a>
                 </div>
@@ -79,7 +79,7 @@
                     <img src="Webimages/conwaysMe.jpeg" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
                     <a href="mywork.html">
                         <div class="hoverOverImage-layer_top">
-                            <div class="hoverOverImage-text">Programing Projects</div>
+                            <div class="hoverOverImage-text">PROGRAMING PROJECTS</div>
                         </div>
                     </a>
                 </div>
