--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -46,7 +46,7 @@
     </div>
     <div class="centerWrap">
         <h1 class="w">Overview</h1>
-        <p>Build a <b>web application</b> which enables Customers to order customised burger and separate <b>java
+        <p>The task was to build a <b>web application</b> which enables Customers to order customised burger and separate <b>java
                 application</b> that displays the order to kitchen production line and reorder ingredients. </p>
         <h2>Project Team: </h2>
         <ul class="dark">
@@ -58,8 +58,8 @@
                 web & java application)</li>
             <li ><b>Sinny: </b>Content Manager (produce some content & gathered icons and helped in the production line
                 application.</li>
-            <li id="planning"><b>Heba: </b> Java GUI Developer (produced the production line login GUI and learning basic. <u>Away
-                    for 2 days.</u>)</li>
+            <li id="planning"><b>Heba: </b> Java GUI Developer (produced the production line login GUI and learning basics. <u>Away
+                    for 2 days.</u></li>
         </ul>
         <h1 class="w">Planning</h1>
         <h2>Project Summary </h2>
